# meson-library-f

./: meson.build
include/c/: c.h
include/f/: f.h
src/: c.c  f.c
